# ChangeLog for dev-perl/PAR
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PAR/ChangeLog,v 1.14 2011/09/04 11:20:50 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -PAR-1.002.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> PAR-1.2.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*PAR-1.2.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +PAR-1.2.0.ebuild:
  Change version scheme

  24 Apr 2011; Fabian Groffen <grobian@gentoo.org> PAR-1.002.ebuild:
  Marked ~x86-solaris, bug #296509

  18 Dec 2010; Torsten Veller <tove@gentoo.org> PAR-1.002.ebuild:
  Stable on x86 and amd64 (#348832)

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -PAR-1.000.ebuild:
  Cleanup

*PAR-1.002 (04 Aug 2010)

  04 Aug 2010; Torsten Veller <tove@gentoo.org> +PAR-1.002.ebuild:
  Version bump

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -PAR-0.994.ebuild:
  Cleanup

*PAR-1.000 (11 Apr 2010)

  11 Apr 2010; Torsten Veller <tove@gentoo.org> +PAR-1.000.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -PAR-0.992.ebuild,
  -PAR-0.993.ebuild:
  Cleanup

*PAR-0.994 (25 Jul 2009)

  25 Jul 2009; Torsten Veller <tove@gentoo.org> +PAR-0.994.ebuild:
  Version bump

*PAR-0.993 (20 Jul 2009)

  20 Jul 2009; Torsten Veller <tove@gentoo.org> +PAR-0.993.ebuild:
  Version bump

  19 Jul 2009; Torsten Veller <tove@gentoo.org> PAR-0.992.ebuild:
  IO-Compress replaces Compress-Zlib

*PAR-0.992 (30 Jun 2009)

  30 Jun 2009; Torsten Veller <tove@gentoo.org> +PAR-0.992.ebuild,
  +metadata.xml:
  Import from perl-experimental (#275932)

  22 Apr 2009; Michele Beltrame <mb@cattlegrid.info>
  -PAR-0.982.ebuild,
  -PAR-0.983.ebuild,
  +PAR-0.992.ebuild:
  Bump + cleanup
