@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST PAR-1.002.tar.gz 90208 RMD160 d2403a33799855654fab8f38af85d6d180f03d73 SHA1 8ec29e9ce78190805aecbe7c969a96585ec8374b SHA256 b4196596979e3873a5e54ef6bb9835236dcf812ae9a0ec8cbac68559abeee5c1
-EBUILD PAR-1.2.0.ebuild 577 RMD160 69df9169879b8851c5e36733e1f86ff5e5e036dd SHA1 8e3bfc02b67d3a596705edc6d9fcf7d6555fa0ac SHA256 7f97294c5c7717a90393bf48146315fea55039e4c0c7ee41010fa3aea0c47a33
-MISC ChangeLog 1807 RMD160 3db9afb0b39ae36ce7cffad62650bb3fe867774b SHA1 14e38a897cd9c66a59fc2a95fa35fd4651148ebc SHA256 a70531f7c81f73ba0c9ff2731b2bdccbed955541e96bcfc85bdd89522d13486d
+EBUILD PAR-1.2.0.ebuild 525 RMD160 65b35cf401677d29f1b1c8b9a731574b637f4cad SHA1 b5e791312b9deac89587b4714396eac350cc6200 SHA256 80f83e6dbf9caa6375b467c6d8363272dc31b196c82af8a2b000b5c9f990e58c
+MISC ChangeLog 1969 RMD160 4bd8562c72eee62824809f0464ba39620d627a64 SHA1 13e5419c6b82d971335d3e6a2e34f1e2dee7891e SHA256 7d9e8a9f913ee6c11fbb8f5c80bf1487845ebd3c115370a80556a41c785e18ca
 MISC metadata.xml 229 RMD160 67a6025c81c457fca6dc125bada5567556e3ee7c SHA1 edeb523e62c19047bd097ef77a30558f2db25013 SHA256 1c421c138df463c5a44e12a72eead20e1c9c20913fe1e604c18fe5cd94591637
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk5jYDEACgkQV3J2n04EauxAbQCZAftYdYCKnbGdvHMBE8EjHRMa
-7oYAnA/Ag8FAQ1Vls/pa6MYpaZpFgKSj
-=c/LZ
+iEYEAREIAAYFAk7L9H0ACgkQV3J2n04EauwdHQCfWLwCJTVAF5BID2Frsq0bPY6q
+oNgAn27VRt7F/ASwFQ4v6RAUfogSaGSX
+=6EAg
 -----END PGP SIGNATURE-----
