@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PAR/PAR-1.2.0.ebuild,v 1.2 2011/09/03 21:04:30 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PAR/PAR-1.2.0.ebuild,v 1.3 2011/11/22 19:14:00 tove Exp $
 
 EAPI=4
 
@@ -17,9 +17,7 @@ IUSE=""
 DEPEND="virtual/perl-AutoLoader
 	>=virtual/perl-IO-Compress-1.30
 	>=dev-perl/Archive-Zip-1.00
-	>=dev-perl/PAR-Dist-0.32
-	virtual/perl-Digest-SHA
-	dev-perl/Module-Signature"
+	>=dev-perl/PAR-Dist-0.32"
 RDEPEND="${DEPEND}"
 
 SRC_TEST=do
