@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50git-gentoo.el 472 RMD160 3d9c7dcb70d781dd7f12e4a19e838996681ec0d4 SHA1 fc47553c2422af82bbd2588e9853cc0c9cb437c7 SHA256 7cd37e8db7eaeee8d822d38851eb69771b0f09c79883a8e51309a9add85fdbe2
 AUX git-1.6.6.1-interix6.patch 457 RMD160 27bdfe9ab248791f628420cc45751fae2643b3d5 SHA1 6c80a5cb63cbcf89b61b8f5e2c16736cb0be09bc SHA256 a8b788b8ef41ce7fd1018f13795694a908fbb1884de195c89a58fe87f3968849
 AUX git-1.7.1-interix.patch 2192 RMD160 725c43e056bbaa82e4af1f2aef9dd152214f9d65 SHA1 de6062aaa8bd177c77c124696d4253c299bba1fb SHA256 b560fcc41ea93df429290ec645f3e37368ceec1101f7124574fa6d9bab00a495
@@ -100,5 +103,12 @@ EBUILD git-1.7.8_rc1-r1.ebuild 15115 RMD160 a30d1c3408b9435637586284151c36327378
 EBUILD git-1.7.8_rc1.ebuild 15079 RMD160 91d17b1710d77344f8b8c2b78cecd6c6aedce0f6 SHA1 be79f197f75222e00d2349a1c6ad9a5c96defac3 SHA256 5e03afc837bdd011f51e5eaab45a45d4ecacb8044f6eb77ce7c0117357725c7c
 EBUILD git-1.7.8_rc3.ebuild 15112 RMD160 6feda3a5dc56e1cb1a563dd2d503bbddddf4b7d3 SHA1 3b4f425b18653f60431a72598448dfa190e39d0d SHA256 e61b619ee29760038f414350e5c62a4cab46140cb1cb5912d7d20c44747833d3
 EBUILD git-9999.ebuild 15075 RMD160 263565eec62e6fea167127dbcc245a0bc6075b5d SHA1 e7db98316bbac2f42a64d1f4d04d0b920de2bba0 SHA256 e0f23e05269d7736c5ce4797c3c9a7eae906f7f6e9109745a9d3f48fb96beb76
-MISC ChangeLog 83756 RMD160 2e8b7c684d5d73d49c45e755593afe95cf8bd256 SHA1 a4c980a31b4c8e79fa7bef2514209e7051b5e6f8 SHA256 a96a1fe8e406a5ad9f03b4df9edca63c30599ac9c6cf051f48a9054eb7636bd0
-MISC metadata.xml 1586 RMD160 9d5ed136d8274095b860efd8622d7588abf96a5d SHA1 5fc705007565c2f94199f3066450e2f842f1ab7e SHA256 c602ebf1a2248459aa27264cbbb51199da79faebe02574a461848c16b4254011
+MISC ChangeLog 83861 RMD160 aabf55bd60d07823278b448a57fda61348fcf007 SHA1 249b249c46b41859f760c08eb8e7119ac2b063a2 SHA256 12d3a338d5604e6cc91c8605e1b8528d8c83073257aadeb03926dc1a5a3f3913
+MISC metadata.xml 1519 RMD160 4ba9e2c4e8239f644b1f4a82bc47d1b587e195a6 SHA1 813d8c8015a1cb757e54fa8681f8a7686cfc40e7 SHA256 58313781f3108991fee93cb0119e6720fe895487e43d44dbf96c4733f81854ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEUEARECAAYFAk7L7Z8ACgkQCaWpQKGI+9Rs3QCfQoMMI0aJzVzWBFIMucAIZLGg
+nwIAmOURDLTPh77KOdrV/IqsFL8r4U0=
+=yJNb
+-----END PGP SIGNATURE-----
