@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX nginx.conf-r4 1358 RMD160 a948df249a16be86c114d587cfa5ee570d84a356 SHA1 e9db0447a1beb326a0858cf8189328229d1d3edf SHA256 6ff6c9301ea2a4d74a335b9119d7f9dba87d4e83793cf22d837d49f061763096
 AUX nginx.init-r2 1827 RMD160 2ece9278fd4a3ca948106e024c2607fca02e2599 SHA1 76af70e8fcad8b298851382d18160d11dc3e2cca SHA256 89801c2e0ea3480380dedfbc84b0cc993ab6b93768886246a22e650ba0a61798
 AUX nginx.logrotate 364 RMD160 9fdfd2ea2f49b8dba20a030d893e34779bb32364 SHA1 4ab07992fa5c64f753e3643e1b51fcab4dec6ccf SHA256 9e3e090dfd10861d5f9b279e19113ce8d05caf9f33d488f6aabf9f19ac0cf925
@@ -15,11 +18,18 @@ DIST ngx_http_headers_more-0.15.tar.gz 22738 RMD160 2200ab529a086dd6bcf11a9a0470
 DIST ngx_slowfs_cache-1.6.tar.gz 10972 RMD160 e1d10851db4a55fc465665caa3f6989d142af2d3 SHA1 072d06b7547629b244bebeef7df7425567f264c9 SHA256 cc0505dbba30153691ff7b3a7353804d5ceb9a519a407b938cae49e9913a7bcc
 DIST ngx_upload_progress-0.8.2.tar.gz 16559 RMD160 3aadb9bf9b15b3810d1acb466d331ea5bdae6062 SHA1 cbff2734cccc3ac93b3422a9a01547af29f9c11d SHA256 cab70d2e300cfa0d9d7d3b34bf27810533ecbf11dddcd5078a4754cfab337c95
 DIST ngx_upload_progress-0.8.3.tar.gz 16694 RMD160 b3c8835a270cda2224f5be35f1afb818821609b3 SHA1 0edae535d1efd50524d9947acaebe3979b06fcfb SHA256 f391da7fd1a89bd65e852182b6cbc746289cd10c83b211be18e703ff3e3986ae
-EBUILD nginx-1.0.10.ebuild 11067 RMD160 92f343d4e4350e4b9991c7d2661d96faee61add0 SHA1 7afe3ffb451289be3e53821dd4da56664487a7b6 SHA256 d660521b78d18fa240f3bd2c5e1d9470ec952589d93e62b702ed4bf5b25cede8
+EBUILD nginx-1.0.10.ebuild 11067 RMD160 e033b5a47b8d6aecdfe66cb57d95db4fc4438c7a SHA1 2b7710439cfc6166a1d1a45531f3b05de367e67b SHA256 6fe9da690e226a98663cba34ff9305b6b486302ee185c680bc00e80aa58cf1c7
 EBUILD nginx-1.0.6.ebuild 11057 RMD160 54e943fdd65866305a45e3e2d570b7fcba6852cd SHA1 b477ebeeff4d5cf59477439b9fec861e0e1c8028 SHA256 1f17304ec81efab1194aaa91ae6bbd3b0cf3d98537f5514a3ccb24404c727822
 EBUILD nginx-1.0.8.ebuild 11066 RMD160 eb09a1f9f4caae50b47b13be160226fa75d6ceda SHA1 78ce0cc7b1874d75d9282f3d2b95b37de5a7ac3a SHA256 dac234ce2be548e3ccb1c4904fed43871390a7fb79c437d58f08444ee0e8fa71
 EBUILD nginx-1.1.4.ebuild 11059 RMD160 8216fe64c66067856221321a612ed3cdc595ba54 SHA1 54f030096326d90e02345dc65539a30bc5f69d6c SHA256 fc987cb555ce33b35d082773828e076d0598a9fc2c62fc504c1e485cdf66ca00
 EBUILD nginx-1.1.6.ebuild 11070 RMD160 4e3391fdf19e2a0c50639f5e8f742d439cf8fd91 SHA1 cad63f2936da1f28d30bd385eb5e6492bf75905a SHA256 e08f61ab16f7f5352ff2bc678758adee54d70d890d1a45d498542276cc631dcf
 EBUILD nginx-1.1.8.ebuild 11070 RMD160 f9218657dc97cab0ed43fd6555c9238e10232457 SHA1 94977416cffb30d1dbe953557362c16bd6e8e754 SHA256 d7bad33340ca1089ae68e2b78a0927dabb07756874ffd237b445bcd3fb92d0e0
-MISC ChangeLog 48588 RMD160 1bddad904b1dcafe8b41f204c989cdbe569d47b3 SHA1 2c051955689a6fb0209b2f9e1e5ac1cf1fe2d986 SHA256 6358ae0a363800252223fa491288e5f1ff996a8c45cf560cc157c71aab9a78a4
+MISC ChangeLog 48895 RMD160 04027ba7fb60c716afb9b3991e0940effbdd7323 SHA1 50ec2364cf8c952a1ed1054324070958d7ec8596 SHA256 bca14218e0ed38c0529e53d9d7c429e8338f2b485909584707be3ecc9d09f816
 MISC metadata.xml 2414 RMD160 79f17ab5f66a0359b96d06f7d600252cefbd6309 SHA1 f96287af3c58618b5a6ba2bd9ee9eb5c9a6ce2ee SHA256 3302551fe00b56bee7bd6ce07c241a47dee4592b4501de002db85669f219c756
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iEYEARECAAYFAk7Lzn0ACgkQp5vW4rUFj5qhaQCaAqbNtVV5lby3K5z+siJIztRt
+tmIAniB3rkl2syeWy2DiIyAqjiL+4IZA
+=LP+i
+-----END PGP SIGNATURE-----
